[package]
name = "jsondiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking"] }
regex = "1.5"
lazy_static = "1.4"
serde = {version ="1",features = ["derive"]}
serde_json = "1"
anyhow = "1"
colored = "2"
itertools = "0.10"